# otustenverkko

./: .mailmap  README.md
amqtt/: Cargo.toml
amqtt/src/: gcp_mqtt.rs  lib.rs  mqtt.rs  packets.rs  validation.rs
configotus/: .gitignore  bigquery_schema.json  firebase_manager.py  giot_manager.py  ilmaotus.j2  ilmaotus.service  keys.py  operations.py  otus_config.py  requirements.txt
ilmaotus/: .gitignore  Cargo.toml  build.rs
ilmaotus/src/: main.rs  messages.rs  sensor.rs
pilviotus/: .gitignore  deploy.sh  main.py  requirements.txt
playbooks/: build.yaml  build_ilmaotus.yaml  install.yaml  provision.yaml  test.yaml
protos/: messages.proto
