[package]
name = "amqtt"
version = "0.1.0"
authors = ["Mikko Jaakkola <mikko.la.jaakkola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1"

futures-lite = "1"
futures = "0.3"
mqttrs = "0.4"
bytes = "0.6"
thiserror = "1"
log = { version = "0.4", features = ["std", "serde", "max_level_debug", "release_max_level_warn"] }
jsonwebtoken = "7"
serde = { version="1", features = ["derive"] }
serde_json = "1"
chrono = {version = "0.4", features = ["serde"]}
backoff = { version = "0.3", features = ["async-std"] }
rustls = "0.19"

[dependencies.async-tls]
version = "0.11"
default-features = false
features = ["client"]

[dev-dependencies]
env_logger = "0.8"
anyhow = "1.0"