[package]
name = "ilmaotus"
version = "0.1.0"
authors = ["Mikko Jaakkola <mikko.la.jaakkola@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust driver for the Sensirion SGPC3 gas sensor."
keywords = ["sgpc3", "sensirion", "driver", "tvoc", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"
smol = "1.2"
jsonwebtoken = "7.2"
serde = "1.0"

sensirion-i2c = "0.1"
linux-embedded-hal = "0.3"
i2cdev = "0.4"
shtcx = "0.10"
svm40 = "1.0.0"

protobuf = "2"

sgp40 = "0.0.4"
amqtt = { path="../amqtt" }

[dev-dependencies]
embedded-hal-mock = "0.7"

[build-dependencies]
protoc-rust = "2.0"

[profile.release]
lto = true

[build]
target = "armv7-unknown-linux-gnueabihf"